Update for Production

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
 <body>
 <div id="jsContent">
-<script type="text/javascript" src="script/access_log.js"></script>
+<!--<script type="text/javascript" src="script/access_log.js"></script>-->
+<script type="text/javascript" src="https://access-log-js.herokuapp.com/script/access_log.js"></script>
 </div>
 
 </body>
