--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
 <meta charset="utf-8">
-<title>Access Log via JavaScript</title>
+<title>Collect Access Log via JavaScript</title>
 </head>
 
 <body>
